# ccf-star

./: .gitignore  README.md  package.json  pnpm-lock.yaml  start-dev.bat  start_dev.py
apps/api/: .env.example  README.md  pyproject.toml
apps/api/src/coc_star_api/: __init__.py  account_auth.py  ai_provider.py  ai_repository.py  board_repository.py  character_repository.py  coc7_rules.py  database.py  dice_roller.py  face_matcher.py  knowledge_repository.py  main.py  models.py  passwords.py  room_bgm.py  room_bgm_repository.py  room_chat.py  room_chat_repository.py  room_manager.py  room_repository.py  scene_layer.py  scene_layer_repository.py  scene_repository.py  session_auth.py  settings.py  token_presentation.py  token_presentation_repository.py  user_repository.py
apps/api/tests/: test_account_auth.py  test_character_repository.py  test_coc7_rules.py  test_dice_roller.py  test_face_matcher.py  test_knowledge_repository.py  test_room_bgm.py  test_room_chat.py  test_room_manager.py  test_room_scenes.py  test_scene_layer.py  test_session_auth.py
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  AssetLibraryPanel.tsx  AuthPage.tsx  CharacterLibraryPanel.tsx  DiceConfigPanel.tsx  HomePage.tsx  KnowledgeBasePanel.tsx  RoomAiPanel.tsx  RoomCharacterPanel.tsx  RoomDrawer.tsx  RoomKnowledgePanel.tsx  SceneBackgroundPanel.tsx  authStore.ts  roomStore.ts  styles.css  vite-env.d.ts
docs/: architecture.md
scripts/: start-dev.ps1
