[project]
name = "coc-star-api"
version = "0.1.0"
description = "coc-star TRPG virtual tabletop API"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21,<1.0",
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.115,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "pydantic-settings>=2.8,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.11,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
